# bevy_svg

./: AGENTS.md  Cargo.toml
examples/common/: lib.rs
src/: lib.rs  loader.rs  origin.rs  plugin.rs  svg.rs
src/render/: mod.rs  tessellation.rs  vertex_buffer.rs
src/render/svg2d/: bundle.rs  mod.rs  plugin.rs
src/render/svg3d/: bundle.rs  mod.rs  plugin.rs
