[package]
authors = ["Daniel Wiesenberg <weasy@hotmail.de>"]
description = "Load and draw SVG files in Bevy."
edition = "2021"
license = "MIT OR Apache-2.0"
name = "bevy_svg"
readme = "README.md"
repository = "https://github.com/Weasy666/bevy_svg/"
version = "0.16.0-rc1"
keywords = ["gamedev", "graphics", "bevy", "svg"]
categories = ["Graphics", "Game engines", "Rendering"]
exclude = ["assets", "examples"]
rust-version = "1.70"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["2d", "3d"]

2d = ["bevy/bevy_sprite"]
3d = ["bevy/bevy_pbr"]

[dependencies]
bevy = { version = "0.16", default-features = false, features = ["bevy_asset", "bevy_core_pipeline", "bevy_render", "bevy_log"] }
copyless = "0.1"

lyon_geom = "1.0"
lyon_tessellation = "1.0"
lyon_path = "1.0"
usvg = "0.45"
svgtypes = "0.16"

anyhow = "1.0"
thiserror = "2.0"
